--- a/src/main.less
+++ b/src/main.less
@@ -1,45 +1,35 @@
-.player{
-    position: fixed;
-    bottom: 0px;
-    width: 100%;
-    height: 48px;
-    background: #fff;
+ul,li{
+    list-style: none;
+    -webkit-margin-before: 0em;
+    -webkit-margin-after: 0em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 0px;
+    margin-top: 0;
+    margin-bottom: 0em !important;
 }
-.player_img{
-    width: 100%;
-    height:48px;
-    img{
-        float: left;
-        width: 50px;
-        height: 50px;
-    }
-    .player_icon{
-        float: left;
-        height: 48px;
-        line-height: 48px;
-        span{
-            cursor: pointer;
-            font-size: 26px;
-            padding: 3px 5px;
-            margin: 5px;
-            border-radius: 50%;
-        }
-        .songTime{
-            font-size: 14px;
-            height: 50px;
-            line-height: 50px;
-            margin: 0;
-            padding: 0;
-            vertical-align: super;
-        }
-    }
-    .player_slider{
-        float: left;
-        height: 48px;
-        line-height: 48px;
-        width: calc(~"100% - 700px");
-        .ant-slider{
-            margin-top: 18px;
-        }
-    }
+
+
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸*/ 
+::-webkit-scrollbar 
+{ 
+    width: 5px; 
+    height: 10px; 
+    background-color: rgba(245, 245, 245, 0); 
+} 
+   
+/*定义滚动条轨道 内阴影+圆角*/ 
+::-webkit-scrollbar-track 
+{ 
+    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    // border-radius: 10px; 
+    background-color: rgba(245, 245, 245, 0); 
+} 
+   
+/*定义滑块 内阴影+圆角*/ 
+::-webkit-scrollbar-thumb 
+{ 
+    // border-radius: 10px; 
+    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3); 
+    background-color: #555; 
 }
